# frustum-pointnets

./: .gitignore  pyproject.toml  summary.md
kitti/: prepare_data.py
models/: frustum_pointnets_v1.py
models/tf_ops/3d_interpolation/: tf_interpolate_compile.sh
models/tf_ops/grouping/: tf_grouping_compile.sh
models/tf_ops/sampling/: tf_sampling_compile.sh
train/: provider.py  test.py  train.py
